--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -4,6 +4,7 @@
 
 .header {
   margin-top: 35px;
+  margin-bottom: 90px;
   .box-flex {
     justify-content: space-between;
     align-items: center;
