--- a/src/scss/sections/_intro.scss
+++ b/src/scss/sections/_intro.scss
@@ -3,8 +3,46 @@
 */
 
 .intro {
+  .box-flex {
+    justify-content: space-between;
+  }
+
+  &__left {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+
   &__right {
     width: 680px;
-    height: 474px;
   }
+}
+
+.main-title {
+  font-size: 42px;
+  font-weight: 300;
+  margin: 0 0 10px 0;
+}
+
+.descr-title {
+  font-size: 22px;
+  margin-bottom: 35px;
+}
+
+.cost-text {
+  font-size: 20px;
+  margin-bottom: 16px;
+  font-weight: 100;
+}
+
+.btn {
+  width: 190px;
+  outline: none;
+  padding: 18px 0;
+  background: #ffebe6;
+  border-radius: 2px;
+}
+
+.slider__pic_height {
+  height: 474px;
 }
