--- a/src/scss/sections/_intro.scss
+++ b/src/scss/sections/_intro.scss
@@ -15,6 +15,7 @@
 
   &__right {
     width: 680px;
+    overflow: hidden;
   }
 }
 
@@ -33,6 +34,7 @@
   font-size: 20px;
   margin-bottom: 16px;
   font-weight: 100;
+  line-height: 140%;
 }
 
 .btn {
@@ -40,9 +42,29 @@
   outline: none;
   padding: 18px 0;
   background: #ffebe6;
-  border-radius: 2px;
+  border-radius: 3px;
+
+  &:active {
+    color: $text;
+  }
 }
 
 .slider__pic_height {
   height: 474px;
+}
+
+#slider {
+  display: flex;
+
+  .slick-arrow {
+    position: absolute;
+    bottom: -10%;
+    right: 0;
+    z-index: 10;
+    cursor: pointer;
+
+    &:first-child {
+      right: 10%;
+    }
+  }
 }
