--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,10 @@ $text: #4f4f4f;
 
 @import 'sections/header';
 @import 'sections/intro';
+@import 'sections/advantages';
+@import 'sections/about';
+@import 'sections/services';
+@import 'sections/portfolio';
+@import 'sections/packages';
+@import 'sections/reviews';
+
