--- a/src/scss/_misc/_slick.scss
+++ b/src/scss/_misc/_slick.scss
@@ -243,7 +243,7 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -10%;
+    bottom: -11%;
 
     display: block;
 
@@ -306,20 +306,22 @@
     top: 0;
     left: 0;
 
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
 
-    content: '•';
+    content: '';
     text-align: center;
 
     opacity: .25;
-    color: black;
+    background: #ccc;
+    border: 1px solid #ccc;
+    border-radius: 50%;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 .slick-dots li.slick-active button:before
 {
-    opacity: .75;
-    color: black;
+    background: transparent;
+    border: 1px solid #ccc;
 }
