--- a/src/scss/sections/_advantages.scss
+++ b/src/scss/sections/_advantages.scss
@@ -16,7 +16,7 @@
   }
 
   &__item {
-    background: url(../../../img/chekmark.svg) no-repeat 0 0;
+    background: url(../../img/chekmark.svg) no-repeat 0 0;
     padding-left: 30px;
     padding-top: 5px;
   }
