--- a/src/scss/sections/_packages.scss
+++ b/src/scss/sections/_packages.scss
@@ -53,7 +53,7 @@
 }
 
 .packages__plan-list {
-  list-style-image: url(../../../img/rectangle.svg);
+  list-style-image: url(../../img/rectangle.svg);
   margin: 0 auto;
   padding: 0 0 0 14px;
 }
