--- a/src/scss/sections/_reviews.scss
+++ b/src/scss/sections/_reviews.scss
@@ -1,6 +1,13 @@
 /*
 * reviews style
 */
+.wrapper {
+  width: 50%;
+}
+
+#reviews__wrap {
+  display: flex;
+}
 
 .reviews {
   padding: 90px 0;
@@ -10,8 +17,7 @@
   }
 
   &__item {
-    width: 100%;
-    margin: 0 auto;
+    width: 700px;
     text-align: center;
   }
 
@@ -32,10 +38,3 @@
   }
 }
 
-#reviews__wrap {
-  position: relative;
-  display: block;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-}
