--- a/src/scss/sections/_reviews.scss
+++ b/src/scss/sections/_reviews.scss
@@ -5,17 +5,20 @@
 .reviews {
   padding: 90px 0;
 
+  .container {
+    position: relative;
+  }
+
   .section__title {
     margin-bottom: 50px;
   }
 
   &__item {
-    height: 300px;
-    width: 53%;
+    height: 360px;
     text-align: center;
     margin: 0 auto;
   }
-
+  
   &__pic {
     width: 126px;
     height: 126px;
@@ -25,9 +28,11 @@
     text-align: center;
     margin-bottom: 35px;
   }
-
+  
   &__text {
     text-align: center;
+    width: 53%;
+    margin: 0 auto;
     line-height: 160%;
     margin-bottom: 26px;
   }
@@ -40,8 +45,26 @@
 // }
 
 #reviews__wrap {
-  width: 70%;
+  width: 100%;
   margin: 0 auto;
   height: 360px;
+  // overflow-y: hidden;
+  // overflow-x: visible;
   overflow: hidden;
+  position: relative;
+  
+  .slick-dots {
+    bottom: 5%;
+  }
+
+  .slick-arrow {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    cursor: pointer;
+
+    &:first-child {
+      left: 0;
+    }
+  }
 }
