--- a/src/scss/sections/_intro.scss
+++ b/src/scss/sections/_intro.scss
@@ -56,6 +56,7 @@
 }
 
 #slider {
+  width: 100%;
   display: flex;
 
   .slick-arrow {
@@ -69,4 +70,8 @@
       right: 10%;
     }
   }
+}
+
+.slider__item {
+  width: 100%;
 }
