--- a/src/scss/_misc/_adjustment.scss
+++ b/src/scss/_misc/_adjustment.scss
@@ -21,3 +21,16 @@ body {
   text-align: center;
   margin: 0;
 }
+
+.btn {
+  width: 190px;
+  outline: none;
+  padding: 18px 0;
+  background: #ffebe6;
+  border-radius: 3px;
+  cursor: pointer;
+
+  &:active {
+    color: $text;
+  }
+}
