--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,4 +14,6 @@ $text: #4f4f4f;
 @import 'sections/portfolio';
 @import 'sections/packages';
 @import 'sections/reviews';
+@import 'sections/contacts';
+@import 'sections/footer';
 
