--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,5 +15,6 @@ $text: #4f4f4f;
 @import 'sections/packages';
 @import 'sections/reviews';
 @import 'sections/contacts';
+@import 'sections/popup';
 @import 'sections/footer';
 
