--- a/src/scss/_misc/_adjustment.scss
+++ b/src/scss/_misc/_adjustment.scss
@@ -29,8 +29,13 @@ body {
   background: #ffebe6;
   border-radius: 3px;
   cursor: pointer;
+  border: none;
 
   &:active {
     color: $text;
+  }
+
+  &:hover {
+    box-shadow: 0 2px 3px rgba(255, 224, 201, 0.4);
   }
 }
