--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@ $text: #4f4f4f;
 @import '_misc/mixins';
 @import '_misc/fonts';
 @import '_misc/slick';
+@import '_misc/magnific-popup';
 @import '_misc/adjustment';
 
 @import 'sections/header';
