--- a/src/scss/sections/_popup.scss
+++ b/src/scss/sections/_popup.scss
@@ -86,3 +86,22 @@
     color: #828282;
   }
 }
+
+/*
+* popup-style
+*/
+
+// .popup-style {
+//   // width: 500px;
+// }
+
+.popup-img__item {
+  height: 400px;
+  width: 50%;
+  border: solid 2px #ddd;
+}
+
+.popup-img__pic {
+  width: 100%;
+  height: 100%;
+}
