--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -10,5 +10,9 @@
     margin: 35px auto 0;
     font-size: 18px;
     line-height: 160%;
+
+    @include tablets {
+      width: 90%;
+    }
   }
 }
