--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -4,6 +4,13 @@
 
 .portfolio {
   padding: 99px 0;
+
+  .container {
+    @include tablets {
+      padding: 0;
+    }
+  }
+
   .section__title {
     margin-bottom: 39px;
   }
@@ -25,6 +32,10 @@
       .portfolio__pic {
         transform: scale(1.1);
       }
+    }
+
+    @include tablets {
+      width: 100%;
     }
   }
 
