--- a/src/scss/sections/_services.scss
+++ b/src/scss/sections/_services.scss
@@ -23,6 +23,10 @@
     font-size: 18px;
     line-height: 25px;
     margin-bottom: 90px;
+
+    @include tablets {
+      margin-bottom: 50px;
+    }
   }
   
   &__title {
