--- a/src/scss/_misc/_magnific-popup.scss
+++ b/src/scss/_misc/_magnific-popup.scss
@@ -175,7 +175,8 @@ button::-moz-focus-inner {
 .mfp-image-holder .mfp-close,
 .mfp-iframe-holder .mfp-close {
   color: #fff;
-  right: -6px;
+  // right: -6px;
+  right: -30px;
   text-align: right;
   padding-right: 6px;
   width: 100%;
@@ -237,23 +238,31 @@ button::-moz-focus-inner {
   left: 0;
 }
 .mfp-arrow-left:after {
-  border-right: 17px solid #fff;
+  // border-right: 17px solid #fff;
   margin-left: 31px;
+  content: '';
+  display: block;
+  width: 30px;
+  background: url(../../../img/vector-white-left.svg) no-repeat center center; 
 }
 .mfp-arrow-left:before {
   margin-left: 25px;
-  border-right: 27px solid #3f3f3f;
+  // border-right: 27px solid #3f3f3f;
 }
 
 .mfp-arrow-right {
   right: 0;
 }
 .mfp-arrow-right:after {
-  border-left: 17px solid #fff;
+  // border-left: 17px solid #fff;
   margin-left: 39px;
+   content: '';
+  display: block;
+  width: 30px;
+  background: url(../../../img/vector-white-right.svg) no-repeat center center; 
 }
 .mfp-arrow-right:before {
-  border-left: 27px solid #3f3f3f;
+  // border-left: 27px solid #3f3f3f;
 }
 
 .mfp-iframe-holder {
