--- a/src/scss/sections/_advantages.scss
+++ b/src/scss/sections/_advantages.scss
@@ -6,6 +6,10 @@
   background: rgba(249, 250, 247, 0.6);
   padding: 90px 0;
 
+  @include tablets {
+    padding: 50px 0;
+  }
+
   &__list {
     padding: 0;
     margin: 0;
@@ -13,11 +17,23 @@
     justify-content: space-between;
     list-style-type: none;
     font-size: 18px;
+
+    @include tablets {
+      flex-direction: column;
+    }
   }
 
   &__item {
     background: url(../../img/chekmark.svg) no-repeat 0 0;
     padding-left: 30px;
     padding-top: 5px;
+
+    @include tablets {
+      margin-bottom: 40px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 }
