--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -10,6 +10,10 @@
     align-items: center;
     flex-wrap: wrap;
   }
+
+   @include tablets {
+      margin-bottom: 30px;
+    }
 }
 
 .nav {
@@ -43,6 +47,10 @@
         width: 100%;
       }
     }
+
+    @include tablets {
+      display: none;
+    }
   }
 
   &__link {
@@ -54,4 +62,8 @@
 .phone {
   text-decoration: none;
   color: $text;
+
+   @include tablets {
+      display: none;
+    }
 }
