--- a/src/scss/sections/_packages.scss
+++ b/src/scss/sections/_packages.scss
@@ -5,6 +5,11 @@
 .packages {
   padding: 90px 0 100px;
   background: rgba(249, 250, 247, 0.6);
+
+  @include tablets {
+    padding: 50px 0;
+  }
+
   .section__title {
     margin-bottom: 40px;
   }
@@ -28,6 +33,12 @@
     padding: 40px 20px 36px;
     display: flex;
     flex-direction: column;
+
+    &:last-child {
+      @include tablets {
+        margin-bottom: 0;
+      }
+    }
 
     @include tablets {
       width: 90%;
@@ -55,18 +66,17 @@
   }
 
   &__button {
-    // flex: 0 0 auto;
     text-align: center;
-    
-    //  @include tablets {
-    //   display: none;
-    // }
   }
 
   &__mark {
     font-size: 12px;
     margin-bottom: 23px;
     line-height: 160%;
+
+    @include tablets {
+      font-size: 14px;
+    }
   }
 }
 
@@ -74,6 +84,10 @@
   list-style-image: url(../../img/rectangle.svg);
   margin: 0 auto;
   padding: 0 0 0 14px;
+
+  @include tablets {
+    font-size: 16px;
+  }
 }
 
 .packages__plan-item {
