--- a/src/scss/sections/_services.scss
+++ b/src/scss/sections/_services.scss
@@ -5,6 +5,11 @@
 .services {
   padding: 90px 0 0 0;
   background: rgba(249, 250, 247, 0.6);
+
+  @include tablets {
+    padding: 50px 0;
+  }
+
   .section__title {
     margin-bottom: 39px;
   }
