--- a/src/scss/_misc/_magnific-popup.scss
+++ b/src/scss/_misc/_magnific-popup.scss
@@ -242,7 +242,7 @@ button::-moz-focus-inner {
   content: '';
   display: block;
   width: 30px;
-  background: url(../../../img/vector-white-left.svg) no-repeat center center; 
+  background: url(../../img/vector-white-left.svg) no-repeat center center; 
 }
 .mfp-arrow-left:before {
   margin-left: 25px;
@@ -258,7 +258,7 @@ button::-moz-focus-inner {
    content: '';
   display: block;
   width: 30px;
-  background: url(../../../img/vector-white-right.svg) no-repeat center center; 
+  background: url(../../img/vector-white-right.svg) no-repeat center center; 
 }
 .mfp-arrow-right:before {
   // border-left: 27px solid #3f3f3f;
