--- a/src/scss/_misc/_fonts.scss
+++ b/src/scss/_misc/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
  font-family: "Palatino";
- src: url("../../fonts/Palatino.ttf") format("ttf"),
-      url("../../fonts/Palatino.otf") format("otf"),
-      url("../../fonts/Palatino.svg") format("svg"),
-      url("../../fonts/Palatino.wof") format("wof"),
+ src: url("fonts/Palatino.ttf") format("ttf"),
+      url("fonts/Palatino.otf") format("otf"),
+      url("fonts/Palatino.svg") format("svg"),
+      url("fonts/Palatino.wof") format("wof"),
 }
