--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,5 +17,7 @@ $text: #4f4f4f;
 @import 'sections/reviews';
 @import 'sections/contacts';
 @import 'sections/popup';
+@import 'sections/politicpage';
+@import 'sections/calculator';
 @import 'sections/footer';
 
