--- a/src/scss/sections/_calculator.scss
+++ b/src/scss/sections/_calculator.scss
@@ -13,9 +13,9 @@
 
   .close-button {
     z-index: 9999;
+    position: fixed;
+    right: 5%;
+    top: 5%;
   }
 
-  .uCalc_209613 {
-    overflow: auto;
-  }
 }
