--- a/src/scss/sections/_politicpage.scss
+++ b/src/scss/sections/_politicpage.scss
@@ -35,12 +35,12 @@
   background: transparent;
   border: none;
   outline: none;
-  position: absolute;
+  position: fixed;
   right: 2%;
   top: 2%;
   cursor: pointer;
 }
 
 .highlighted {
-  color: #F26565;
+  color: #f26565;
 }
