--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -10,7 +10,7 @@
 .footer_text {
   text-align: center;
   color: white;
-  font-family: 'Century Gothic', sans-serif;
+  font-family: "CenturyGothic";
   letter-spacing: 0.05em;
   
 }
