--- a/src/scss/_misc/_adjustment.scss
+++ b/src/scss/_misc/_adjustment.scss
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: "Palatino", Arial, Helvetica, sans-serif;
+  font-family: "Palatino", serif;
   color: $text;
 }
 
@@ -24,6 +24,8 @@ body {
 }
 
 .btn {
+  font-size: 14px;
+  text-transform: uppercase;
   width: 190px;
   outline: none;
   padding: 18px 0;
@@ -38,7 +40,7 @@ body {
   }
 
   &:hover {
-    box-shadow: 0 2px 3px rgba(255, 224, 201, 0.4);
+    background: #ffdbd2;
   }
 }
 
