--- a/src/scss/sections/_popup.scss
+++ b/src/scss/sections/_popup.scss
@@ -72,7 +72,6 @@
   .btn {
     align-self: center;
     margin-bottom: 44px;
-    padding: 12px 0;
   }
 }
 
@@ -104,7 +103,7 @@
   border: solid 2px #ddd;
 }
 
-.popup-img__pic {
-  width: 100%;
-  height: 100%;
-}
+// .popup-img__pic {
+//   width: 100%;
+//   height: 100%;
+// }
