--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -45,7 +45,7 @@
 
   &__wrap-pic {
     overflow: hidden;
-    // height: 330px;
+    height: 330px;
     margin-bottom: 15px;
 
     @include tablets {
@@ -56,6 +56,7 @@
 
   &__pic {
     height: 330px;
+    width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     transition: all .3s;
