--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -12,7 +12,8 @@
   }
 
   @include tablets {
-    margin-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
@@ -52,7 +53,7 @@
       display: block;
       background: #4f4f4f;
       opacity: .8;
-      height: 2px;
+      height: 1px;
       position: absolute;
       bottom: -5px;
       left: 0;
